# Prompt-Security-Guide

./: .coverage  .dockerignore  .gitignore  ARCHITECTURE.md  BLOG_POST.md  CHANGELOG.md  CONCLUSIONS.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  FINAL_SUMMARY.md  FOCUS_PLAN.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  ISSUE-STACK.md  KIMI_AUDIT_GUIDE.md  LICENSE  MIGRATION.md  Makefile  README.md  REFACTOR_PLAN.md  REPO_UPDATE_PLAN.md  ROADMAP.md  SECURITY.md  SENIOR_CODE_REVIEW.md  TODO_NEXT.md  advanced-llama8b.json  advanced-qwen3b.json  aggressive-llama70b.json  aggressive-llama8b.json  aggressive-qwen3b.json  baseline-llama70b-groq.json  coverage.json  defense-results-3b.json  local-llama8b-aggressive.json  new-attacks-qwen3b.json  novel-llama70b.json  novel-llama8b.json  plinius-llama8b.json  (+17 more)
.github/: pull_request_template.md
.hermes/: acceptance_tests.yaml  acceptance_tests_hermes_update_audit.yaml  last-test-results.json  pipeline-state.json
archive/: README.md
assets/: .gitkeep
auto_pipeline/: SPEC.md  __main__.py  codex_task.md  config.py  discovery.py  generator.py  known_sources.json  known_vectors.json  main.py  reporter.py  run_auto_test.sh  sources_20260307.json  sources_20260309.json  sources_20260310.json  sources_20260311.json  sources_20260317.json  sources_20260318.json  tester.py  validation.py
datasets/: ATTACK_IMPROVEMENTS.md  DATASET_SPEC.md  README.md  auto_20260306.json  auto_20260307.json  auto_20260308.json  auto_20260309.json  auto_20260310.json  auto_20260311.json  auto_20260313.json  auto_20260316.json  auto_20260317.json  auto_20260319.json  auto_20260320.json  auto_20260321.json  benchmark_presets.json  categories_combined.json  classifier_golden.json  dan_jailbreaks.json  data_leakage_probes.json  defense_templates.json  encoding_attacks.json  fabrication_indicators.json  hallucination_detection_probes.json  harmbench_behaviors.json  harmbench_behaviors_full.json  jailbreak_community.json  jailbreak_wild_2023.json  jailbreakbench_behaviors.json  new_vectors_2026-03-06.json  obliteratus_attacks.json  obliteratus_prompts.json  owasp_2025_attacks.json  prompt_injection_techniques.json  tiny_test.json
defense_templates/: OpenAI Copyrighting Rules.md  README.md
docs/: ATTACK_TAXONOMY.md  BENCHMARKS.md  CLOUD_COMPARISON.md  COMMUNITY_RESOURCES.md  DEFENSE_EFFECTIVENESS.md  DEFENSE_STRATEGIES.md  GROQ_HYPOTHESIS.md  GROQ_MODEL_COMPARISON.md  IMPROVEMENTS.md  LIMITATIONS.md  LOCAL_VS_CLOUD_COMPARISON.md  METHODOLOGY.md  MIGRATION_v4_to_v5.md  MODEL_COMPARISON.md  NEW_ATTACK_FINDINGS.md  README.md  REFERENCES.md  ROADMAP.md  SECURITY_GUIDE.md  TESTING_FRAMEWORK.md  TESTING_GUIDE.md  TESTING_METHODOLOGY_V2.md  TEST_RESULTS.md  THEORETICAL_VECTORS.md  TODO_NEXT.md  USAGE.md  demo.cast  getting-started.md
eval/: baseline_v4.3.0.json  classifier_golden.json
generators/: harm_attacks.py  many_shot_attacks.py  real_jailbreaks.py
jailbreak_tester/: checkpoint.py  cli.py  models.py  orchestrator.py
legacy/: __init__.py
models/: ml_judge_v1.pkl
profiles/: llama3-8b_profile.json  llama3-8b_profile.md
prompt_security_guide.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
psg/: __init__.py  __main__.py  benchmark.py  catalog.py  catalog_validator.py  checkpoint.py  cli.py  config.py  defend.py  errors.py  eval.py  models.py  orchestrator.py  serve.py
research/: DEFENSE_REALITY.md  abliteration-analysis.md  roleplay_analysis_20260321.md  sources_20260309.md  sources_20260310.md  sources_20260326.md  sources_20260327.md  sources_20260328.md  sources_20260329.md  sources_20260330.md  sources_20260331.md  sources_20260401.md  sources_20260402.md  sources_20260403.md  sources_20260404.md  sources_20260405.md  sources_20260406.md  sources_20260407.md  sources_20260408.md  sources_20260409.md  sources_20260410.md  sources_20260412.md  sources_20260414.md  sources_20260416.md  sources_20260417.md  sources_20260418.md  sources_20260419.md  sources_20260420.md  sources_20260421.md  sources_20260422.md  sources_20260423.md  sources_20260424.md  sources_20260425.md  sources_20260426.md  sources_20260427.md  sources_20260428.md
results/: ANALYSIS_SUMMARY.md  README.md  advanced-llama70b.json  compare-llmjudge.json  compare-substring.json  full-61-llmjudge.json  full-61-substring.json  local-test-llama3-8b-llm_judge-20260215-152106.json  local-test-llama3-8b-substring-20260215-151503.json  local-test-qwen2.5-1.5b-llm_judge-20260215-152427.json  local-test-qwen2.5-1.5b-substring-20260215-150639.json  (+13 more)
(+478 files in other folders)
