[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-security-guide"
version = "4.3.0"
description = "Professional framework for defensive LLM security testing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Petteri Kosonen", email = "petteri.a.kosonen@proton.me"}
]
keywords = ["llm", "security", "jailbreak", "prompt-injection", "red-team", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Petsku01/Prompt-Security-Guide"
Repository = "https://github.com/Petsku01/Prompt-Security-Guide"
Documentation = "https://github.com/Petsku01/Prompt-Security-Guide#readme"
Issues = "https://github.com/Petsku01/Prompt-Security-Guide/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.25.0",
]
langchain = [
    "langchain>=0.2.0",
]
serve = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["psg"]

[tool.setuptools.packages.find]
include = ["psg*"]
